code cleanup, removed not needed parameters and methods